--- a/game.libretro.mgba/addon.xml.in
+++ b/game.libretro.mgba/addon.xml.in
@@ -15,8 +15,6 @@
 		<supports_standalone>false</supports_standalone>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-
-Supported files: .gba, .gb, .gbc, .sgb</description>
 		<license>MPLv2.0</license>
 		<platform>@PLATFORM@</platform>
 		<source>https://github.com/kodi-game/game.libretro.mgba</source>
@@ -26,9 +24,7 @@ Supported files: .gba, .gb, .gbc, .sgb</description>
 			<screenshot>resources/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshot-03.jpg</screenshot>
 		</assets>
-
-Supported files: .gba, .gb, .gbc, .sgb</description>
 		<summary lang="en_GB">Nintendo - Game Boy Advance (mGBA)</summary>
-		<description lang="en_GB">mGBA aims to be faster and more accurate than many existing Game Boy Advance emulators, as well as adding features that other emulators lack.Supported files: .gba, .gb, .gbc, .sgb</description>
+		<description lang="en_GB">mGBA aims to be faster and more accurate than many existing Game Boy Advance emulators, as well as adding features that other emulators lack.</description>
 	</extension>
 </addon>
